--- a/admin/view/template/extension/payment/epoint.twig
+++ b/admin/view/template/extension/payment/epoint.twig
@@ -76,6 +76,24 @@
                             {% endif %}
                         </div>
                     </div>
+                    <div class="form-group required">
+                        <label class="col-sm-2 control-label" for="input-security">{{ entry_currency_usd_convert_azn }}</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="payment_epoint_currency_usd_convert_azn" value="{{ payment_epoint_currency_usd_convert_azn ?: '1.70' }}" placeholder="{{ entry_currency_usd_convert_azn }}" id="input-security-currency-usd" class="form-control" />
+                            {% if error_currency_usd_convert_azn %}
+                                <div class="text-danger">{{ error_currency_usd_convert_azn }}</div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="form-group required">
+                        <label class="col-sm-2 control-label" for="input-security">{{ entry_currency_eur_convert_azn }}</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="payment_epoint_currency_eur_convert_azn" value="{{ payment_epoint_currency_eur_convert_azn ?: '1.78' }}" placeholder="{{ entry_currency_eur_convert_azn }}" id="input-security-currency-eur" class="form-control" />
+                            {% if error_currency_eur_convert_azn %}
+                                <div class="text-danger">{{ error_currency_eur_convert_azn }}</div>
+                            {% endif %}
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
                         <div class="col-sm-10">
